fixed email typo

--- a/assets/data/config.json
+++ b/assets/data/config.json
@@ -2,7 +2,7 @@
     "configIsReady": false,
     "domain": "dein-pflanzen-experte.de",
     "hostname": "https://www.dein-pflanzen-experte.de/",
-    "email": "dein-pflanzen-experte.desurrealnetworks.io",
+    "email": "dein-pflanzen-experte.de@surrealnetworks.io",
     "organization": "dein-pflanzen-experte.de",
     "logoText": "Dein-pflanzen-experte.de",
     "title": "Pflanzen",
