--- a/assets/data/config.json
+++ b/assets/data/config.json
@@ -7,7 +7,7 @@
     "logoText": "Dein-pflanzen-experte.de",
     "title": "Pflanzen",
     "subline": "Der Online Shop für alle Pflanzenliebhaber",
-    "companyAddress": "Uvoz 159/26 - Praha 1 - Hradcany, CZ",
+    "companyAddress": "DRW Group GmbH, Nachbars Wiesenweg 55, 38820 Halberstadt, Germany",
     "imageFolder": "/assets/images/images/",
     "productUrl": "/produkt/",
     "kategorieUrl": "/kategorie/",
